Re-enable overscroll glow for VR.

Disabling overscroll glow in the way we did (in
https://codereview.chromium.org/2632493005) caused pull-to-refresh to
break. VR UX folks want overscroll glow anyways now, so let's just
turn it back on and un-break pull-to-refresh.

(Pull-to-refresh was broken because the overscroll controller wasn't
receiving Animate calls, so when the glow got 'shown' it never animated
away so the code thought it was always visible, and therefore prevented
pull-to-refresh)

Bug: 838679
Change-Id: I06fdbaadedfec702d43bf1915f3b05703da3d039
Reviewed-on: https://chromium-review.googlesource.com/1091658
Reviewed-by: Bo <boliu@chromium.org>
Commit-Queue: Michael Thiessen <mthiesse@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565450}
Former-commit-id: 6f29d60a5f3c8d095274b9a92c45e45b9cdf839b